@@ -42,3 +42,7 @@
   margin-right: 12px;
 }
 
+.remove_avatar {
+  margin-top: 10px;
+}
+
